# MiniPaintInventory

./: .dockerignore  .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  README.md  diesel.toml  docker-compose.yaml
assets/: admin.css  home.css  main.css
migrations/2024-08-25-133210_brands/: down.sql  up.sql
migrations/2024-08-28-062327_create_brands/: up.sql
migrations/2024-08-28-062350_create_paints/: down.sql  up.sql
migrations/2024-08-28-062405_create_storage_boxes/: down.sql  up.sql
migrations/2024-08-28-062437_create_paints_2_storage_box/: down.sql  up.sql
src/: main.rs  models.rs  queries.rs  schema.rs  server_functions.rs
src/ui/: admin.rs  home.rs
