[package]
name = "mini-paint-inventory"
version = "0.1.0"
authors = ["Julien Lopez <julien.lopez51@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["desktop", "router"] }

# Debug
dioxus-logger = "0.5.1"
