[package]
name = "mini-paint-inventory"
version = "0.1.0"
authors = ["Julien Lopez <julien.lopez51@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
dioxus = { version = "0.5", features = ["fullstack", "router"] }
diesel = { version = "2.2.3", features = ["postgres"] }

# Debug
dioxus-logger = "0.5.1"
libsqlite3-sys = "0.30.1"

[features]
default = []
server = ["dioxus/axum"]
web = ["dioxus/web"]
